<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/account_main"
    android:label="@string/account_main"
    app:startDestination="@id/account_homeFragment">

    <fragment
        android:id="@+id/tool"
        android:name="com.example.hsknows.accountFragment.ToolFragment"
        android:label="@string/toolbox"
        tools:layout="@layout/account_toolbox" />
    <fragment
        android:id="@+id/bookmark"
        android:name="com.example.hsknows.accountFragment.BookmarkFragment"
        android:label="@string/bookmark"
        tools:layout="@layout/account_bookmark" />
    <fragment
        android:id="@+id/message"
        android:name="com.example.hsknows.accountFragment.MessageFragment"
        android:label="@string/message"
        tools:layout="@layout/account_message" />
    <fragment
        android:id="@+id/setting"
        android:name="com.example.hsknows.accountFragment.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/account_setting" />
    <fragment
        android:id="@+id/account_homeFragment"
        android:name="com.example.hsknows.Account_homeFragment"
        android:label="Account_homeFragment" />
    <fragment
        android:id="@+id/history"
        android:name="com.example.hsknows.accountFragment.HistoryFragment"
        android:label="account_history"
        tools:layout="@layout/account_history" />
</navigation>