<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:tabGravity="center"
                app:tabMode="scrollable">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tableitem_31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_structure" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tableitem_32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/C_Programming" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tableitem_33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/algorithm_design" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tableitem_34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DBS" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tableitem_35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Introduction_to_Computer_Science" />

            </com.google.android.material.tabs.TabLayout>
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>